# cloud_vpn

./: .gitignore  .zuul.yaml  CHANGELOG.rst  README.md  bindep.txt  provider.yaml  providers.yaml  providers_from_devel.yaml  providers_from_galaxy.yaml  provisioners_from_devel.yaml  provisioners_from_galaxy.yaml  requirements.txt  run_test.sh  setup.cfg  test.yaml  tox.ini  vars.yaml  vars.yaml.sample
defaults/: main.yaml
doc/: aws_providers_arguments.md  network_appliance_providers_arguments.md  openstack_providers_arguments.md
docs/: .delete_vpn.md.swp  azure_providers_arguments.md  cloud_providers_arguments.md  common_arguments.md  create_vpn.md  delete_vpn.md  network_appliance_providers_arguments.md
meta/: main.yaml  main.yml
tasks/: add_host_initiator.yaml  add_host_responder.yaml  configure_aws_vpn.yaml  configure_ios.yaml  configure_routing_initiator.yaml  configure_routing_responder.yaml  configure_vpn_initiator.yaml  configure_vpn_responder.yaml  create_ansible_runner_env_files.yaml  create_aws_vpn_to_ios_ansible_runner_env_files.yaml  create_aws_vpn_to_ios_configuration_files.yaml  create_aws_vpn_to_ios_inventory.yaml  create_aws_vpn_to_vyos_ansible_runner_env_files.yaml  create_aws_vpn_to_vyos_configuration_files.yaml  create_aws_vpn_to_vyos_inventory.yaml  create_configuration_files.yaml  create_initiator_deployment_templates.yaml  create_initiator_hostvars.yaml  create_initiator_playbook.yaml  create_inventory.yaml  create_main_playbook.yaml  create_output_dir_tree.yaml  create_peer_a_configuration_files.yaml  create_peer_a_deployment_templates.yaml  (+41 more)
(+207 files in other folders)
