[metadata]
name = cloud_vpn
summary = Ansible Cloud VPN role
description-file =
    README.rst
author = Ansible contributors
home-page = https://www.ansible.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
